--- a/styles/pages.module.css
+++ b/styles/pages.module.css
@@ -3,13 +3,19 @@
     display: flex;
 }
 
-.section {
-    flex-grow: 1;
-    padding: 30px;
-    
+.section, .list {
+    flex-grow: 1;    
     display: flex;
     flex-direction: column;
     row-gap: 10px;
+}
+
+.section {
+    padding: 30px;
+}
+
+.list {
+    overflow-y: auto;
 }
 
 /* 404.js */
